# creamline

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev.frontend  Makefile  README.md  conftest.py  creamline.code-workspace  docker-compose.frontend.yml  docker-compose.yml  nginx.conf  nginx.default.conf  package-lock.json  pyproject.toml  requirements.txt
src/services/: .env.example  .gitignore  conftest.py  pyproject.toml  requirements.txt
src/services/api/: urls.py
src/services/api/v1/: pagination.py  permissions.py  urls.py
src/services/api/v1/milk/: views.py  (+1 more)
src/services/apps/analytics/: interfaces.py
src/services/apps/authentication/: throttles.py  views.py
src/services/apps/healthcheck/: views.py
src/services/apps/milk/: admin.py  apps.py  interfaces.py  models.py
src/services/apps/pasteurisation/: admin.py  apps.py  interfaces.py  models.py
src/services/apps/pasteurs/: admin.py  apps.py  models.py
src/services/apps/pdf_exports/: apps.py  models.py  services.py
src/services/apps/producers/: admin.py
src/services/apps/product_definitions/: admin.py  apps.py  models.py
src/services/apps/profiles/: models.py
src/services/apps/storages/: admin.py  models.py
src/services/apps/users/: admin.py  models.py
src/services/authentication/: forms.py  serializers.py  views.py
src/services/backend/: settings.py  urls.py
src/services/common/: has_group.py
src/services/middlewares/: custom_locale.py
src/services/milk/: admin.py  apps.py  models.py
src/services/milk/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
src/services/pasteurisation/: admin.py  apps.py  models.py
src/services/pasteurised_milk/: admin.py  apps.py  models.py
src/services/pasteurs/: admin.py  apps.py  models.py
src/services/producers/: admin.py  models.py
src/services/product_definitions/: admin.py  apps.py  models.py
src/services/products/: admin.py  models.py
src/services/profiles/: models.py
src/services/storages/: admin.py  models.py
src/services/user_groups/: apps.py  models.py  views.py
src/services/users/: admin.py  creamline.code-workspace  models.py
src/services/utils/: do_utils.py  views.py
(+968 files in other folders)
